src/styles/Header.scss
%flex-row {
  display: flex;
  flex-direction: row;
  align-items: center;
}

header {
  @extend %flex-row;
  position: relative;
  background-color: inherit;
  justify-content: space-between;
  text-transform: uppercase;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding: 5px 5vw;
  letter-spacing: 1px;
  z-index: 1;
  box-shadow: 0 -5px 10px var(--bright-color);
}

nav {
  $transition-time: 0.6s;

  ul {
    @extend %flex-row;
    gap: 5vw;
  }

  a {
    text-decoration: none;
    color: inherit;

    &.active {
      color: var(--bright-color);
      transition: color $transition-time ease-in;
    }
  }

  li {
    padding: 2px;
    border-radius: 10px;
    position: relative;
    overflow: hidden;
  }

  li::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    background-color: var(--bright-color);
    width: 100%;
    height: 1px;
    z-index: -1;
    transition: all $transition-time ease-out;
    transform: scaleX(0);
  }

  li:has(a.active)::before {
    transform: none;
    // outline: 2px solid red;
    // height: 2px;
  }
}

.logo-container {
  line-height: 1;
  overflow: hidden;
  padding-top: 10px;

  * {
    // outline: 1px solid red;
  }

  div {
    font-size: 3rem;
    font-weight: bold;
  }

  a {
    text-decoration: none;
    color: inherit;
    display: flex;
    align-items: center;

    div:first-child {
      transition: transform 0.2s ease-in-out;
      // height: 1.2em;
      position: relative;
    }

    div:first-child::before {
      content: '';
      position: absolute;
      bottom: 0;
      left: 50%;
      background-color: var(--bright-color);
      opacity: 0.5;
      width: 70%;
      height: 5px;
      border-radius: 50%;
      box-shadow: 0 0 5px 2px var(--bright-color);
      transform: translate(-50%, 10px);
      transform-origin: top left;
      transition: transform 0.5s ease-in-out;
    }

    &:hover div:first-child {
      transform: none;
    }

    &.active div:first-child {
      transform: translateY(-10px);
    }

    &.active div:first-child::before {
      transform: translate(-50%, 5px);
    }

    div:last-of-type,
    span:last-of-type {
      align-self: self-end;
    }
  }
}

#toggler-container {
  @extend %flex-row;
  gap: 20px;
}

.theme-toggle {
  $size: 2rem;
  width: $size;
  height: $size;
  display: flex;
  align-items: center;
  flex-direction: column;
  overflow: hidden;

  svg {
    min-width: 100%;
    min-height: 100%;
    flex-shrink: 0;
    transition: transform 0.5s;

    .light-theme & {
      transform: translateY(-$size);
    }
  }
}

.btn-lang-container {
  display: inline-block;

  &:not(:last-child)::after {
    content: '/';
  }
}

@keyframes appear-from-top {
  from {
    transform: translateY(-100%);
  }
  to {
    transform: none;
  }
}

@media (hover: hover) {
  nav {
    a:hover {
      color: var(--bright-color);
    }
  }
  .theme-toggle {
    &:hover svg {
      fill: var(--bright-color);
    }
  }
}

@media (prefers-reduced-motion) {
  header {
    animation: none;
  }
}

@media (max-width: 900px) {
  header {
    padding-inline: 5px;
  }
}

@media (max-width: 700px) {
  header {
    letter-spacing: 0;
    padding-bottom: 5px;
    justify-content: center;
  }

  nav {
    margin-bottom: 15px;

    ul {
      flex-direction: column;
      align-items: flex-start;
      gap: 5px;

      li {
        line-height: 1.8;
      }
    }
  }

  .btn-mobile-menu {
    position: absolute;
    right: 5px;
    width: 30px;
    height: 24px;
    padding: 1px 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: stretch;
  }

  .stick {
    height: 1px;
    background-color: var(--contrast-color);
    transition: transform 0.2s ease-out;

    &:first-child {
      transform-origin: top left;
    }

    &:last-child {
      transform-origin: bottom left;
    }
  }

  .show-menu {
    .stick:first-child {
      transform: rotate(45deg);
    }

    .stick:nth-child(2) {
      transform: translateX(100px);
    }

    .stick:last-child {
      transform: rotate(-45deg);
    }
  }

  .mobile-menu {
    background-color: var(--primary-color);
    box-shadow: -5px 5px 5px var(--secondary-color);
    border-left: 1px solid var(--secondary-color);
    padding: 10px 20px;
    border-bottom-left-radius: 10px;
    position: absolute;
    top: 100%;
    right: 0;
    z-index: -2;

    transform: translateX(150%);
    transition: 0.2s ease-out;
  }
}

